--- a/sites/all/themes/pul_base/sass/components/calendar/_calendar--landing-page.scss
+++ b/sites/all/themes/pul_base/sass/components/calendar/_calendar--landing-page.scss
@@ -26,6 +26,7 @@
         }
         td.views-field-title {
             width: 60%;
+            white-space: nowrap;
         }
         td.views-field-field-open-hours {
             text-align: right;
